feat: Add ability to add multiple classes to a relation